custom scrollbar fix styles

--- a/src/routes/styles.scss
+++ b/src/routes/styles.scss
@@ -136,9 +136,33 @@ html {
 	font-feature-settings: normal;
 	transition: background-color 150ms ease-out;
 	margin: 0;
+	padding: 0;
 	line-height: 1.5;
+	overflow-x: hidden;
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
 		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+@mixin scrollbars(
+	$size: 0.525rem,
+	$foreground-color: var(--surface),
+	$background-color: var(--base)
+) {
+	// For Chrome & Safari
+	&::-webkit-scrollbar {
+		width: $size;
+		height: $size;
+	}
+	&::-webkit-scrollbar-thumb {
+		background: $foreground-color;
+		border-radius: 0.5rem;
+	}
+	&::-webkit-scrollbar-track {
+		background: $background-color;
+	}
+
+	// Standard version (Firefox only for now)
+	scrollbar-color: $foreground-color $background-color;
 }
 
 body {
@@ -147,4 +171,5 @@ body {
 	padding: 0;
 	position: inherit;
 	line-height: inherit;
+	@include scrollbars;
 }
